@@ -49,10 +49,13 @@ e-mail address: neil@math.mth.pdx.edu  (Internet)
  
 /* Generated by Interface Builder */
 
-/* $Id: GoApp.m,v 1.2 2005/04/06 00:32:58 gcasa Exp $ */
+/* $Id: GoApp.m,v 1.3 2005/04/06 00:48:05 gcasa Exp $ */
 
 /*
  * $Log: GoApp.m,v $
+ * Revision 1.3  2005/04/06 00:48:05  gcasa
+ * Fixed server command crash.
+ *
  * Revision 1.2  2005/04/06 00:32:58  gcasa
  * Cleaned up the code.
  *
@@ -1395,15 +1398,17 @@ beginning a new game.", @"OK", nil, nil);
 	return self;
 }
 
-- sendCommand:sender {
-	char buf[256];
+- sendCommand:sender 
+{
+  char buf[256];
+  NSString *title = [sender title];
 
-	strcpy(buf, [[[sender selectedCell] title] cString]);
-	buf[[[[sender selectedCell] title] length]] = '\n';
-	buf[[[[sender selectedCell] title] length]+1] = '\0';	
-	IGSSendString(buf);
-
-	return self;
+  strncpy(buf, [title cString], [title length]);
+  buf[[title length]] = '\n';
+  buf[[title length]+1] = '\0';	
+  IGSSendString(buf);
+  
+  return self;
 }
 
 - gameCompleted {
